<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <!-- En esta parte llamamos el estilo que creamos anteriormente para ahorrarnos 3 líneas de código-->
    android:hint="@string/firstName"
    android:inputType="textPersonName" />

    <!-- En esta parte llamamos el estilo que creamos anteriormente para ahorrarnos 3 líneas de código-->
    android:hint="@string/lastName"
    android:inputType="textPersonName" />

    <!-- En esta parte llamamos el estilo que creamos anteriormente para ahorrarnos 3 líneas de código-->
    android:inputType="textEmailAddress" />

    <!-- En esta parte llamamos el estilo que creamos anteriormente para ahorrarnos 3 líneas de código--><![CDATA[
    android:hint="@string/password"
    android:inputType="textPassword" />

    ]]>

    <EditText
        android:id="@+id/txtName"
        style="@style/viewCustom"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtLastName"
        style="@style/viewCustom"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtEmail"
        style="@style/viewCustom"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <EditText
        android:id="@+id/txtPassword"
        style="@style/viewCustom"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName" />

    <Button
        style="@style/viewCustom"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" /><!-- En esta parte llamamos el estilo que creamos anteriormente para ahorrarnos 3 líneas de código-->
    android:onClick="register"
    android:background="@color/colorAccent"
    android:text="@string/createAct"
    android:textColor="@android:color/white"
    android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>